--- a/index.html
+++ b/index.html
@@ -56,6 +56,53 @@
            
         </nav>
     </div>
+    <div class="produto">
+        <h2 class="titulo">Produtos que estão bombando</h2>
+        <div class="lista-produtos">
+            <div href="#" class="item-produto">
+                <img src="imagens/camiseta.png" class="foto-produto">
+                <h3 class="titulo-produto">Camiseta Conforto</h3>
+                <p class="descricao-produto">Multicores e tamanhos. Tecido de algodão 100%, fresquinho para o verão. Modelagem unissex.</p>
+                <h3 class="preco-produto">R$ 70,00</h3>
+                <a href="#" class="botao-produto">Ver mais</a>
+            </div>
+            <div href="#" class="item-produto">
+                <img src="imagens/calca.png" class="foto-produto">
+                <h3 class="titulo-produto">Camiseta Conforto</h3>
+                <p class="descricao-produto">Multicores e tamanhos. Tecido de algodão 100%, fresquinho para o verão. Modelagem unissex.</p>
+                <h3 class="preco-produto">R$ 70,00</h3>
+                <a href="#" class="botao-produto">Ver mais</a>
+            </div>
+            <div href="#" class="item-produto">
+                <img src="imagens/bolsa.png" class="foto-produto">
+                <h3 class="titulo-produto">Camiseta Conforto</h3>
+                <p class="descricao-produto">Multicores e tamanhos. Tecido de algodão 100%, fresquinho para o verão. Modelagem unissex.</p>
+                <h3 class="preco-produto">R$ 70,00</h3>
+                <a href="#" class="botao-produto">Ver mais</a>
+            </div>
+            <div href="#" class="item-produto">
+                <img src="imagens/jaqueta.png" class="foto-produto">
+                <h3 class="titulo-produto">Camiseta Conforto</h3>
+                <p class="descricao-produto">Multicores e tamanhos. Tecido de algodão 100%, fresquinho para o verão. Modelagem unissex.</p>
+                <h3 class="preco-produto">R$ 70,00</h3>
+                <a href="#" class="botao-produto">Ver mais</a>
+            </div>
+            <div href="#" class="item-produto">
+                <img src="imagens/oculos.png" class="foto-produto">
+                <h3 class="titulo-produto">Camiseta Conforto</h3>
+                <p class="descricao-produto">Multicores e tamanhos. Tecido de algodão 100%, fresquinho para o verão. Modelagem unissex.</p>
+                <h3 class="preco-produto">R$ 70,00</h3>
+                <a href="#" class="botao-produto">Ver mais</a>
+            </div>
+            <div href="#" class="item-produto">
+                <img src="imagens/tenis.png" class="foto-produto">
+                <h3 class="titulo-produto">Camiseta Conforto</h3>
+                <p class="descricao-produto">Multicores e tamanhos. Tecido de algodão 100%, fresquinho para o verão. Modelagem unissex.</p>
+                <h3 class="preco-produto">R$ 70,00</h3>
+                <a href="#" class="botao-produto">Ver mais</a>
+            </div>
+        </div>
+    </div>
  
     <script src="app.js"></script>
  
