formatação dos produtos

--- a/index.html
+++ b/index.html
@@ -31,76 +31,89 @@
         <nav class="menu-categorias">
             <a href="#" class="item-categoria">
                 <img src="imagens/categoria-camisetas.png" alt="Categoria de Camisetas" class="foto-categoria">
-                <p class="texto-categoria">Camisetas</p></a>
-
+                <p class="texto-categoria">Camisetas</p>
+            </a>
+ 
             <a href="#" class="item-categoria">
                 <img src="imagens/categoria-calcas.png" alt="Categoria de calcas" class="foto-categoria">
-                <p class="texto-categoria">Calças</p></a>
-
+                <p class="texto-categoria">Calças</p>
+            </a>
+ 
             <a href="#" class="item-categoria">
                 <img src="imagens/categoria-bolsas.png" alt="Categoria de Bolsas" class="foto-categoria">
-                <p class="texto-categoria">Bolsas</p></a>
-
+                <p class="texto-categoria">Bolsas</p>
+            </a>
+ 
             <a href="#" class="item-categoria">
                 <img src="imagens/categoria-casacos.png" alt="Categoria de Jaquetas" class="foto-categoria">
-                <p class="texto-categoria">Jaquetas</p></a>
-
+                <p class="texto-categoria">Jaquetas</p>
+            </a>
+ 
             <a href="#" class="item-categoria">
                 <img src="imagens/categoria-oculos.png" alt="Categoria de óculos" class="foto-categoria">
-                <p class="texto-categoria">Óculos</p></a>
-
+                <p class="texto-categoria">Óculos</p>
+            </a>
+ 
             <a href="#" class="item-categoria">
                 <img src="imagens/categoria-calcados.png" alt="Categoria de tênis" class="foto-categoria">
-                <p class="texto-categoria">Tênis</p></a>
-            
-           
+                <p class="texto-categoria">Tênis</p>
+            </a>
+ 
         </nav>
     </div>
+ 
     <div class="produto">
         <h2 class="titulo">Produtos que estão bombando</h2>
         <div class="lista-produtos">
-            <div href="#" class="item-produto">
-                <img src="imagens/camiseta.png" class="foto-produto">
+            <div class="item-produto">
+                <img src="imagens/camiseta.png" class="foto-produto" alt="Foto-camiseta">
                 <h3 class="titulo-produto">Camiseta Conforto</h3>
-                <p class="descricao-produto">Multicores e tamanhos. Tecido de algodão 100%, fresquinho para o verão. Modelagem unissex.</p>
+                <p class="descricao-produto">Multicores e tamanhos. Tecido de algodão 100%, fesquinho para o verão.
+                    Modelagem unissex </p>
                 <h3 class="preco-produto">R$ 70,00</h3>
                 <a href="#" class="botao-produto">Ver mais</a>
-            </div>
-            <div href="#" class="item-produto">
-                <img src="imagens/calca.png" class="foto-produto">
-                <h3 class="titulo-produto">Camiseta Conforto</h3>
-                <p class="descricao-produto">Multicores e tamanhos. Tecido de algodão 100%, fresquinho para o verão. Modelagem unissex.</p>
-                <h3 class="preco-produto">R$ 70,00</h3>
+                </div>
+ 
+            <div class="item-produto">
+                <img src="imagens/calca.png" class="foto-produto" alt="Foto-calça">
+                <h3 class="titulo-produto">Calça Afaiataria</h3>
+                <p class="descricao-produto">Modelo Wide Leg alfaiataria em linho. Uma peça pra vida toda!</p>
+                <h3 class="preco-produto">R$ 180,00</h3>
                 <a href="#" class="botao-produto">Ver mais</a>
-            </div>
-            <div href="#" class="item-produto">
-                <img src="imagens/bolsa.png" class="foto-produto">
-                <h3 class="titulo-produto">Camiseta Conforto</h3>
-                <p class="descricao-produto">Multicores e tamanhos. Tecido de algodão 100%, fresquinho para o verão. Modelagem unissex.</p>
-                <h3 class="preco-produto">R$ 70,00</h3>
+                </div>
+ 
+            <div class="item-produto">
+                <img src="imagens/bolsa.png" class="foto-produto" alt="Foto-bolsa">
+                <h3 class="titulo-produto">Bolsa Coringa</h3>
+                <p class="descricao-produto">Bolsa camel em couro sintético de alta duração. Ideal para acompanhar você por uma vida!</p>
+                <h3 class="preco-produto">R$ 120,00 </h3>
                 <a href="#" class="botao-produto">Ver mais</a>
-            </div>
-            <div href="#" class="item-produto">
-                <img src="imagens/jaqueta.png" class="foto-produto">
-                <h3 class="titulo-produto">Camiseta Conforto</h3>
-                <p class="descricao-produto">Multicores e tamanhos. Tecido de algodão 100%, fresquinho para o verão. Modelagem unissex.</p>
-                <h3 class="preco-produto">R$ 70,00</h3>
+                </div>
+ 
+            <div class="item-produto">
+                <img src="imagens/jaqueta.png" class="foto-produto" alt="Foto-jaqueta">
+                <h3 class="titulo-produto">Jaqueta Jeans</h3>
+                <p class="descricao-produto">Modelo unissex oversized com gola de camurça. Atemporal e autêntica</p>
+                <h3 class="preco-produto">R$ 150,00</h3>
                 <a href="#" class="botao-produto">Ver mais</a>
-            </div>
-            <div href="#" class="item-produto">
-                <img src="imagens/oculos.png" class="foto-produto">
-                <h3 class="titulo-produto">Camiseta Conforto</h3>
-                <p class="descricao-produto">Multicores e tamanhos. Tecido de algodão 100%, fresquinho para o verão. Modelagem unissex.</p>
-                <h3 class="preco-produto">R$ 70,00</h3>
+                </div>
+ 
+            <div class="item-produto">
+                <img src="imagens/oculos.png" class="foto-produto" alt="Foto-oculos">
+                <h3 class="titulo-produto">Óculos Redondo</h3>
+                <p class="descricao-produto">Armação metálica em grafite com lentes arredondadas. Sem erro!</p>
+                <h3 class="preco-produto">R$ 120,00</h3>
                 <a href="#" class="botao-produto">Ver mais</a>
-            </div>
-            <div href="#" class="item-produto">
-                <img src="imagens/tenis.png" class="foto-produto">
-                <h3 class="titulo-produto">Camiseta Conforto</h3>
-                <p class="descricao-produto">Multicores e tamanhos. Tecido de algodão 100%, fresquinho para o verão. Modelagem unissex.</p>
-                <h3 class="preco-produto">R$ 70,00</h3>
+                </div>
+ 
+            <div class="item-produto">
+                <img src="imagens/tenis.png" class="foto-produto" alt="Foto-tenis">
+                <h3 class="titulo-produto">Tênis Chunky</h3>
+                <p class="descricao-produto">Snicker casual com solado mais alto e modelagem robusta. Modelo unissex.</p>
+                <h3 class="preco-produto">R$ 250,00</h3>
                 <a href="#" class="botao-produto">Ver mais</a>
-            </div>
+                </div>
+ 
         </div>
     </div>
  
