estrutura de formatação das facilidades

--- a/index.html
+++ b/index.html
@@ -113,7 +113,17 @@
                 <h3 class="preco-produto">R$ 250,00</h3>
                 <a href="#" class="botao-produto">Ver mais</a>
                 </div>
- 
+        </div>
+    </div>
+    
+    <div class="facilidades">
+        <h2 class="titulo-facilidades">Conheça todas as nossa facilidades</h2>
+        <div class="conjunto-icones">
+            <img src="imagens/icone-pix.png" class="icone" alt="pix">
+            <div>
+                <h4 class="informacoes-icone">PAGUE PELO PIX</h4>
+                <p class="texto-icone">Ganhe 5% OFF em pagamentos via PIX</p>
+            </div>
         </div>
     </div>
  
