--- a/index.html
+++ b/index.html
@@ -115,21 +115,41 @@
                 </div>
         </div>
     </div>
-    
+
     <div class="facilidades">
-        <h2 class="titulo-facilidades">Conheça todas as nossa facilidades</h2>
-        <div class="conjunto-icones">
-            <img src="imagens/icone-pix.png" class="icone" alt="pix">
-            <div>
-                <h4 class="informacoes-icone">PAGUE PELO PIX</h4>
-                <p class="texto-icone">Ganhe 5% OFF em pagamentos via PIX</p>
+        <h2 class="titulo-facilidades">Conheça todas as nossas facilidades</h2>
+        <div class="icones">
+            <div class="conjunto-icones">
+                <img src="imagens/icone-pix.png" class="icone">
+                <div class="informacoes-icone">
+                    <h4 class="titulo-icone">PAGUE PELO PIX</h4>
+                    <p class="texto-icone">Ganhe 5% OFF em pagamentos via PIX</p>
+                </div>
+            </div>
+            <div class="conjunto-icones">
+                <img src="imagens/icone-troca.png" class="icone">
+                <div class="informacoes-icone">
+                    <h4 class="titulo-icone">TROCA GRÁTIS</h4>
+                    <p class="texto-icone">Fique livre para troca em até 30 dias.</p>
+                </div>
+            </div>
+            <div class="conjunto-icones">
+                <img src="imagens/icone-sustentabilidade.png" class="icone">
+                <div class="informacoes-icone">
+                    <h4 class="titulo-icone">SUSTENTABILIDADE</h4>
+                    <p class="texto-icone">Moda responsável, que respeita o meio ambiente.</p>
+                </div>
             </div>
         </div>
     </div>
- 
+    <div class="promocoes">
+    <h3 class="titulo-promocoes">Quer receber nossas novidades, promoções exclusivas e 10% OFF na primeira compra? Cadastre-se</h3>
+    <form class="formulario-promocoes">
+        <input type="text" class="campo-promocoes" placeholder="Digite seu email">
+        <button type="button" class="botao-promocoes">Enviar</button>
+    </form>
+
+    </div>
     <script src="app.js"></script>
- 
- 
 </body>
- 
 </html>
