--- a/index.html
+++ b/index.html
@@ -150,6 +150,9 @@
     </form>
 
     </div>
+    <footer class="rodape">
+        <p class="texto-rodape">2025 &copy; Desenvolvido por <strong>[Murilo Zamaioli]</strong> | Projeto fictício sem fins comerciais</p>
+    </footer>
     <script src="app.js"></script>
 </body>
 </html>
